--- a/www/templates/product.list.html
+++ b/www/templates/product.list.html
@@ -9,8 +9,8 @@
 		  	<div class="border curve-box text-center bg-white">
 			  	<img ng-src="{{img}}{{productList[$index].photo}}" class="width100">
 			  	<p class="ellipsis p5 m0">{{productList[$index].name}}</p>
-			  	<p class="bg-info text-white m0" ng-show="productList[$index].balance > 0">MYR {{productList[$index].price}}</p>
-			  	<p class="bg-danger text-white m0" ng-show="productList[$index].balance <= 0">Out of Stock</p>
+			  	<p class="bg-info text-white p10 m0" ng-show="productList[$index].balance > 0">MYR {{productList[$index].price}}</p>
+			  	<p class="bg-danger text-white p10 m0" ng-show="productList[$index].balance <= 0">Out of Stock</p>
 		  	</div>
 	  	</a>
 	  	<!-- col-right -->
@@ -19,8 +19,8 @@
 		  	<div class="border curve-box text-center bg-white">
 			  	<img ng-src="{{img}}{{productList[$index+1].photo}}" class="width100">
 			  	<p class="ellipsis p5 m0">{{productList[$index+1].name}}</p>
-			  	<p class="bg-info text-white m0" ng-show="productList[$index+1].balance > 0">MYR {{productList[$index+1].price}}</p>
-			  	<p class="bg-danger text-white m0" ng-show="productList[$index+1].balance <= 0">Out of Stock</p>
+			  	<p class="bg-info text-white p10 m0" ng-show="productList[$index+1].balance > 0">MYR {{productList[$index+1].price}}</p>
+			  	<p class="bg-danger text-white p10 m0" ng-show="productList[$index+1].balance <= 0">Out of Stock</p>
 		  	</div>
 	  	</a>
 	</div>
