--- a/www/css/alignment.css
+++ b/www/css/alignment.css
@@ -26,6 +26,11 @@
 
 
 .m0{ margin: 0 0 0 0 !important; }
+.mt0{ margin-top: 0px !important; }
+.mb0{ margin-bottom: 0px !important; }
+.ml0{ margin-left: 0px !important; }
+.mr0{ margin-right: 0px !important; }
+
 .m0auto{ margin: 0 auto !important; }
 
 .m5{ margin: 5px !important; }
