--- a/www/templates/order.history.details.html
+++ b/www/templates/order.history.details.html
@@ -1,69 +1,66 @@
 <ion-view view-title="Order History Details">
   <ion-content ng-controller="orderhistorydetails">
 
-    <div class="item item-text-wrap p0">
+  	<!-- table -->
+  	<div class="row bg-default border-bottom">
+      <div class="col">Product</div>
+      <div class="col col-20">Price <span class="font10">(MYR)</span></div>
+      <div class="col col-20">Qty</div>
+      <div class="col col-30 text-right">Subtotal <span class="font10">(MYR)</span></div>
+    </div>
+    <!-- row -->
+    <div class="row border-bottom mt10" ng-repeat="Item in OrderInfo.Items">
+    	<div class="col">
+    		<img ng-src="{{img}}{{Item.photo}}" style="height:30px;">
+    		<p class="font10 m0">{{Item.product_name}}</p>
+    	</div>
+  		<div class="col col-20">{{Item.unit_price}}</div>
+  		<div class="col col-20">{{Item.qty}}</div>
+  		<div class="col col-30 text-right">{{Item.price}}</div>
+    </div>
 
-    	<!-- Table header name -->
-	    <div class="row col-header center font-small">
-          <div class="col">Product id</div>
-          <div class="col">Product name</div>
-          <div class="col">Quantity</div>
-          <div class="col">Price (MYR)</div>
-        </div>
+    <!-- subtotal -->
+    <div class="row text-right pt5">
+      <div class="col col-75">SubTotal:</div>
+      <div class="col">{{OrderInfo.PriceInfo.sub_total}}</div>
+    </div>
+    <!-- discount -->
+    <div class="row text-right bg-default pt5">
+      <div class="col col-75">Discount ({{OrderInfo.PriceInfo.discount}}):</div>
+      <div class="col">{{OrderInfo.PriceInfo.after_discount}}</div>
+    </div>
+    <!-- shipping -->
+    <div class="row text-right pt5">
+  		<div class="col col-75">Shipping Fee</div>
+  		<div class="col">
+  			{{OrderInfo.PriceInfo.shipping_price}}
+  		</div>
+  	</div>
+  	<!-- total -->
+  	<div class="row text-right font20 pt5 border-bottom bg-default">
+  		<div class="col col-75">Total:</div>
+  		<div class="col"><b>{{OrderInfo.PriceInfo.total_price}}</b></div>
+  	</div>
 
-        <!-- Table data -->
-        <ul class="list">
-			<div class="row col-bg center col-line font-small" style="word-wrap: normal;" ng-repeat="Item in OrderInfo.Items">
-				<div class="col">{{Item.id_ProductMaster}}</div>
-				<div class="col">{{Item.product_name}}</div>
-				<div class="col">{{Item.qty}}</div>
-				<div class="col text-right">{{Item.price}}</div>
-	        </div>	        
-		</ul>
-
-		<div class="row">
-			<div class="col-50">
-				<p class="font-medium text-right">Shipment Fee:</p>
-			</div>
-			<div class="col-50">
-				<p class="font-big text-right" style="color:#3498DB;">{{OrderInfo.shipping_price}}</p>
-			</div>
-		</div>
-
-		<!-- Total price -->
-		<div class="row">
-			<div class="col-50">
-				<p class="font-medium text-right">Total:</p>
-			</div>
-			<div class="col-50">
-				<p class="font-big text-right" style="color:#3498DB;">{{OrderInfo.total_price}}</p>
-			</div>
-		</div>
-	</div>
-	<!-- End of listing -->
-	
-	<!-- Shipping Info of recipient -->
-	<div class="card">
-		<div class="item item-divider font-medium">
-			Deliver to
-		</div>
-		<div class="item item-text-wrap">
-			 <label class="item item-input font-medium royal">
-        		<ul class="list-unstyled">
-        			<!-- shipping -->
-	        		<li>{{OrderInfo.Method.given_name}} {{OrderInfo.Method.family_name}}</li>
-	        		<li>{{OrderInfo.Method.phone}}</li>
-	        		<li>{{OrderInfo.Method.address1}}</li>
-	        		<li>{{OrderInfo.Method.address2}}</li>
-	        		<li>{{OrderInfo.Method.city}}</li>
-	        		<li>{{OrderInfo.Method.postcode}}</li>
-	        		<!-- selfpickup -->
-	        		<li>{{OrderInfo.Method.name}}</li>
-	        		<li>{{OrderInfo.Method.address}}</li>
-        		</ul>
-      		</label>
-		</div>
-	</div>
+  	<!-- Shipping info -->
+  	<div class="row bg-default border-bottom p10 mt20">
+  		<span ng-if="OrderInfo.Method.given_name"><b>Deliver to</b></span>
+  		<span ng-if="OrderInfo.Method.name"><b>Pick Up Address</b></span>
+  	</div>
+  	<div class="row p10">
+  		<ul class="list-unstyled">
+  			<!-- shipping -->
+      		<li>{{OrderInfo.Method.given_name}} {{OrderInfo.Method.family_name}}</li>
+      		<li>{{OrderInfo.Method.phone}}</li>
+      		<li>{{OrderInfo.Method.address1}}</li>
+      		<li>{{OrderInfo.Method.address2}}</li>
+      		<li>{{OrderInfo.Method.city}}</li>
+      		<li>{{OrderInfo.Method.postcode}}</li>
+      		<!-- selfpickup -->
+      		<li>{{OrderInfo.Method.name}}</li>
+      		<li>{{OrderInfo.Method.address}}</li>
+  		</ul>
+  	</div>
 
   </ion-content>
 </ion-view>
