--- a/www/templates/order.history.html
+++ b/www/templates/order.history.html
@@ -1,25 +1,20 @@
 <ion-view view-title="Order History">
-  <ion-content ng-controller="orderhistory">
+	<ion-content ng-controller="orderhistory">
 
-    <div class="item font-small" ng-repeat="OrderInfo in OrderList">
-    	<p ng-show="OrderList == null">No order yet.</p>
-    	<a href="#/app/order/history/details/{{OrderInfo.code}}">
-	    	<div class="card m0" style="background:#F1F1F1;">
-		     	<div class="row">
+	    <div class="font12 border-bottom" ng-repeat="OrderInfo in OrderList">
+	    	<p ng-show="OrderList == null">No order yet.</p>
+	    	<a href="#/app/order/history/details/{{OrderInfo.code}}">
+		    	<div class="row">
 			    	<div class="col col-50">Invoice #</div>
 			    	<div class="col col-50"><span class="text-color">{{OrderInfo.code}}</span></div>
 			    </div>
 			    <div class="row">
 			    	<div class="col col-50">Order Date</div>
-			    	<div class="col col-50"><span class="text-color">{{OrderInfo.created_on}}</span></div>
+			    	<div class="col col-50"><span class="text-color">{{OrderInfo.purchase_date}}</span></div>
 			    </div>
 		    	<div class="row">
-			    	<div class="col col-50">Payment Status</div>
+			    	<div class="col col-50">Payment</div>
 			    	<div class="col col-50"><span class="text-color">{{OrderInfo.status}}</span></div>
-			    </div>
-			    <div class="row">
-			    	<div class="col col-50">Recipient</div>
-			    	<div class="col col-50"><span class="text-color">{{OrderInfo.BillingInfo.given_name}} {{OrderInfo.BillingInfo.family_name}}</span></div>
 			    </div>
 			    <div class="row">
 			    	<div class="col col-50">Shipment Status</div>
@@ -29,9 +24,8 @@
 			    		</span>
 			    	</div>
 			    </div>
-			</div>
-	    </a>
-    </div>
+		    </a>
+	    </div>
 
-  </ion-content>
+	</ion-content>
 </ion-view>
