--- a/www/templates/shipping.html
+++ b/www/templates/shipping.html
@@ -1,21 +1,23 @@
 <ion-view view-title="Shipping Methods">
 
-<!-- For place the header in centre -->
-<ion-header-bar>
-     <div class="title center"></div>
-</ion-header-bar>
+	<!-- For place the header in centre -->
+	<ion-header-bar>
+	     <div class="title center"></div>
+	</ion-header-bar>
 
-  <!-- Tabs -->
-  <ion-tabs class="tabs-calm tabs-icon-only">
-    <ion-tab title="Delivery">
-	    <ion-content>
-	      <!-- Tab 1 content -->
-		    <form name="shipmentform" ng-submit="ShipmentForm(shipment)">
+	<!-- Tabs -->
+	<ion-tabs class="tabs-calm tabs-icon-only">
+		<ion-tab title="Delivery">
+	    	<ion-content class="pt75">
+	      	<!-- Tab 1 content -->
+		    <form name="shipmentform" ng-submit="ShipmentForm(shipment)" class="form">
 		    	<!-- Shipping information of guest info  -->
-				<div class="card pt75">
-					<div class="item item-divider font-medium">Shipping Information</div>
-					<div class="item item-text-wrap">
-						<input type="checkbox" ng-model="checkboxData" ng-change="identifyUser(checkboxData)"/> Ship to me
+				<div class="card border mb0">
+					<div class="item item-divider bg-default">Shipping Information</div>
+					<div class="item item-text-wrap border-bottom">
+						<div class="btn-default p10">
+							<input type="checkbox" ng-model="checkboxData" ng-change="identifyUser(checkboxData)"/> Ship to me
+						</div>
 						<div class="row">
 							<div class="col col-50">
 								<input type="text" placeholder="Given Name" ng-model="shipment.given_name" name="given_name" required>
@@ -67,96 +69,64 @@
 								</div>
 							</div>
 						</div>
-
-						<div class="row">
-							<div class="col-50">
-								<div class="font-medium" style="color:#999;">
-							      Shipping Fee
-							    </div>
-								<!-- <label class="item-input item-select">
-								    <div class="input-label font-medium" style="color:#999;">
-								      Shipping Method
-								    </div>
-								    <select name="dropDownShipment" ng-model="mySelect" ng-change="showSelectValue(mySelect)" required>
-								      <option value="" selected>Select</option>
-								      <option ng-repeat="ShipmentInfo in ShipmentList" value="{{ShipmentInfo.id}}" ng-selected="ShipmentInfo.id == shipment.id_SalesOrderShipmentType">{{ShipmentInfo.name}} = MYR {{ShipmentInfo.price}}</option>
-								    </select>
-									<div class="assertive font-small" ng-messages="shipmentform.dropDownShipment.$error">
-										<div ng-message="required">require select*</div>
-									</div>
-								</label> -->
-							</div>
-							<div class="col-50">
-								<div class="font-medium" style="color:#999;">
-								{{SalesInfo.shipping_price}}
-								</div>
-							</div>	
-						</div> 
+					</div>
+					<div class="row text-center p10 bg-default font30">
+		            	<span class="width50"><b>Shipping Fee:</b></span>
+		            	<span class="width50"><b>{{SalesInfo.shipping_price}}</b></span>
 					</div>
 				</div>
-				<!-- End of shipping detail -->
-
 				<div class="row">
-					<div class="col">
-						<button type="submit" class="button button-block btnCheckOut font-medium"
-						ng-disabled="shipmentform.$invalid">Next</button>
-					</div>
+					<button type="submit" class="button button-full button-positive" ng-disabled="shipmentform.$invalid">Next</button>
 				</div>
 			</form>
 		</ion-content>
-    </ion-tab>
+	</ion-tab>
+	<!-- <label class="item-input item-select">
+	    <div class="input-label font-medium" style="color:#999;">
+	      Shipping Method
+	    </div>
+	    <select name="dropDownShipment" ng-model="mySelect" ng-change="showSelectValue(mySelect)" required>
+	      <option value="" selected>Select</option>
+	      <option ng-repeat="ShipmentInfo in ShipmentList" value="{{ShipmentInfo.id}}" ng-selected="ShipmentInfo.id == shipment.id_SalesOrderShipmentType">{{ShipmentInfo.name}} = MYR {{ShipmentInfo.price}}</option>
+	    </select>
+		<div class="assertive font-small" ng-messages="shipmentform.dropDownShipment.$error">
+			<div ng-message="required">require select*</div>
+		</div>
+	</label> -->	
 
-    <ion-tab title="Self Pickup">
-      <!-- Tab 2 content -->
-      <ion-content>
- 		<form name="pickupForm" ng-submit="selfpickup(locationInfo)">
+	<ion-tab title="Self Pickup">
+	  <!-- Tab 2 content -->
+	  <ion-content class="pt75">
+			<form name="pickupForm" ng-submit="selfpickup(locationInfo)">
 	    	<!-- Pickup information of guest info  -->
-			<div class="card pt75">
-				<div class="item item-divider font-medium">
-					Self Pick Up
-				</div>
+			<div class="card border mb0">
+				<div class="item item-divider bg-default">Self Pick Up</div>
 				<div class="item item-text-wrap">
-					<div class="row">
-						<div class="col-50">
-						    <div class="input-label" style="color:#C0C0C0;">
-						      Location
-						    </div>
+					<label class="item item-input item-select">
+						<div class="input-label">Location</div>
+						<select ng-model="mySelect" ng-change="showSelectValue(mySelect)">
+							<option value="" selected>--Select--</option>
+							<option ng-repeat="locationInfo in locationList" value="{{locationInfo.id}}" ng-selected="locationInfo.id == selfpickupinfo.id_SelfPickUpLocation">{{locationInfo.name}}</option>
+					    </select>
+					    <input type="hidden" name="location" ng-model="selfpickupinfo.id" required />
+						<div class="assertive font-small" ng-messages="pickupForm.location.$error">
+							<div ng-message="required">require select*</div>
 						</div>
-						<div class="col-50">
-							<label class="item-input">
-								<select ng-model="mySelect" ng-change="showSelectValue(mySelect)">
-							      <option value="" selected>--Select--</option>
-							      <option ng-repeat="locationInfo in locationList" value="{{locationInfo.id}}" ng-selected="locationInfo.id == selfpickupinfo.id_SelfPickUpLocation">{{locationInfo.name}}</option>
-							    </select>
-							</label>
-							<input type="hidden" name="location" ng-model="selfpickupinfo.id" required />
-							<div class="assertive font-small" ng-messages="pickupForm.location.$error">
-								<div ng-message="required">require select*</div>
-							</div>
-						</div>	
-					</div>
-					<div class="row">
-						<div class="col-50">
-							<div class="input-label" style="color:#C0C0C0;">Address</div>
-						</div>
-						<div class="col-50">
-							<p>{{selfpickupinfo.address}}</p>
-						</div>
-					</div>
+					</label>
+					<label class="item item-input">
+						<div class="input-label">Address</div>
+						<div class="col">{{selfpickupinfo.address}}</div>
+					</label>
 				</div>
 			</div>
 			<!-- End of shipping detail -->
-
 			<div class="row">
-				<div class="col">
-					<button type="submit" class="button button-block btnCheckOut font-medium"
-					ng-disabled="pickupForm.$invalid">Next</button>
-				</div>
+				<button type="submit" class="button button-full button-positive" ng-disabled="pickupForm.$invalid">Next</button>
 			</div>
-		</form>
-      </ion-content>
-    </ion-tab>
-    <!-- End of two tabs -->
-  </ion-tabs>
+			</form>
+		</ion-content>
+	</ion-tab>
+	<!-- End of two tabs -->
+	</ion-tabs>
 
 </ion-view>
