--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -56,7 +56,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<button type="submit" class="button button-full button-positive">Save</button>
+				<button ng-disabled="profileform.$invalid || details.code == null" type="submit" class="button button-full button-positive">Save</button>
 			</div>
 		</form>
 
